Document ClassNotFoundException root cause and fix for Jib child images
Adds Commit 3 section to JAVA21_MIGRATION.md explaining why external
listener JARs (added by child Dockerfiles) became invisible after the
Java 21 / Hive 4.x migration: Hive 4.x JavaUtils changed getClassLoader()
to return AppClassLoader instead of Spring Boot's LaunchedURLClassLoader,
and Jib bakes an explicit classpath at image-build time that omits JARs
added by child Dockerfile RUN steps. Fix is to override ENTRYPOINT with
a wildcard /app/libs/* classpath in the child Dockerfile.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>